added build script into gradle